[metadata]
name = skovutils
version = 0.1.0
description = Small utility functions used in the MicrobeTakeover project
long_description = file: README.md
long_description_content_type = text/markdown
author = Mads Skov
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License

[options]
packages = find:
include_package_data = True
python_requires = >=3.8

[options.packages.find]
where = .
